# AIOS

./: .env.demo  .env.example  .gitignore  AIOS_Architecture.drawio  README.md  dashboard.py  demo_queries.txt  ding_2_numbers.py  hello.py  performance_plots.py  pyproject.toml  requirements.txt  test.py  test_out.txt
Arch/: smart_semantic_search
aios/: __init__.py  __main__.py  ai_shell.py  app_launcher.py  app_normalizer.py  config.py  context_memory.py  file_manager.py  file_ops.py  llm_engine.py  logger.py  main.py  process_manager.py  rl_memory.py  task_executor.py  ui.py  url_router.py  voice.py  workflow_engine.py
aios/daemons/: __init__.py  device_monitor.py  file_organizer.py  memory_guardian.py  process_watcher.py
aios/features/: __init__.py  assistant.py  notes.py  screenshot.py
aios/utils/: __init__.py  platform.py
tests/: test_aios_all.py
